Fixed fieldset width in desktop mode. Fixed textfields width on mobile

--- a/django_admin_bootstrapped/bootstrap3/static/admin/css/overrides.css
+++ b/django_admin_bootstrapped/bootstrap3/static/admin/css/overrides.css
@@ -66,3 +66,8 @@ td.action-checkbox {
 .tooltip.in {opacity: 1} /* Hard to see against black text otherwise */
 
 #_changelist {clear: both;}
+
+.vLargeTextField {
+    width: 100%;
+
+}
